--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,33 @@ body {
 a {
   color: #00B7FF;
 }
+
+
+.contribute {
+  background-color: #B9085C;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    border-radius: 5px;
+    border: none;
+}
+
+.filter {
+  border-radius: 5px;
+    padding: 15px;
+    width: 150px;
+}
+.typecss{
+  padding: 30px;
+    height: 45px;
+    width: 160px;
+}
+
+.title{
+  text-align: center;
+}
+.searchbar {
+  display: flex;
+    justify-content: center;
+}
+}
