--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+
     <div class="title">
-<h1><%= title %></h1>
 <p>Take a look at Africa tech ecosystem !</p>
     </div>
 
@@ -23,7 +16,7 @@
 
 </div>
 
-<div class="map">
+<div id="map">
 
 </div>
 
@@ -31,5 +24,6 @@
 
 
 </div>
-  </body>
-</html>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAADIzhXOJbzOfhryet6qTIr9ZpMH26rq4&callback=initMap"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="../javascripts/main.js" ></script>
