--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,6 +1,6 @@
 <h2>Log in</h2>
 
-<form action="/login" method="POST" class="form">
+<form action="/login" method="POST" class="form-auth">
 	<div>
 		<label>Username:
 		<input type="text" name="username">
@@ -18,6 +18,10 @@
   <% } %>
   
 	<div>
-		<input type="submit" value="Log In">
+		<button>Log In</button>
 	</div>
+	<p class="account-message">
+		Don't have an account? <a href="/signup">Sign up</a>
+	</p>
+
 </form>
