index.ejs edited

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,8 +20,10 @@
 
 </div>
 
-<button class="contribute" type="button" name="button">I want to contribute !</button>
+<div class="contribute">
+  I want to contribute !
 
+</div>
 
 </div>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAADIzhXOJbzOfhryet6qTIr9ZpMH26rq4&callback=initMap"></script>
