--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,20 +13,43 @@ a {
     color: white;
     font-size: 20px;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 3px;
     border: none;
+    text-align: center;
+
 }
 
 .filter {
-  border-radius: 5px;
+  border-radius: 1px;
     padding: 15px;
-    width: 150px;
+    width: 250px;
     border: 1px grey solid;
+    border: none;
+
+}
+input::placeholder {
+color: white;
+font-size: 13px;
 }
 .typecss{
   padding: 30px;
     height: 45px;
-    width: 160px;
+    width: 250px;
+    background-color: #39B2AB;
+    border: none;
+    color: white;
+    font-size: 13px;
+    border-radius: 1px;
+}
+
+#searchname {
+  background-color: #65A188;
+}
+#searchcountry {
+  background-color: #505EC6;
+}
+#searchregion {
+  background-color: #FFAD43;
 }
 
 .title{
@@ -44,66 +67,15 @@ a {
     justify-content: center;
 }
 
+
 #map {
+  margin-top: 15px;
   height: 550px;
   width: 100%;
   background-color: grey;
       }
-button .contribute{
-  display: flex;
-  justify-content: center;
-}
 
-
-/*signup login error massage style*/
-.form-auth {
-  margin: 30px auto;
-  width: 380px;
-}
-
-.form-auth label {
-  color: #666;
-  display: inline-block;
-  margin-bottom: 10px;
-  text-align: center;
-  width: 100%;
-}
-
-.form-auth input,
-.form-auth button {
-  box-sizing: border-box;
-  font-size: 14px;
-  outline: 0;
-  padding: 4px;
-  width: 100%;
-}
-
-.form-auth button {
-  background: #43a3e6;
-  border: 1px solid #43a3e6;
-  border-radius: 4px;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 14px;
-  padding: 8px 16px;
-  text-decoration: none;
-  text-transform: uppercase;
-  transition: .3s ease background;
-  width: 100%;
-}
-
-.form-auth button:hover {
-  background: #fff;
-  color: #43a3e6;
-  transition: .3s ease background;
-}
-
-.error-message {
-  background: #F02B63;
-  box-sizing: border-box;
-  color: #fff;
-  margin: 20px auto;
-  padding: 20px;
-  width: 100%;
-}
+      footer p {
+        text-align: center;
+        font-weight: bold;
+      }
