--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -3,16 +3,50 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css">
   </head>
   <body>
-    <header>
+
+
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="http://bulma.io">
       <h1> <a href="/"> <%= title %> </a> </h1>
-    </header>
+    </a>
+
+    <button class="button navbar-burger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+
+  </div>
+    <div class="navbar-menu">
+
+  <div class="navbar-end">
+    <div class="navbar-item">
+      <a href="#" class="navbar-item" >login</a>
+    </div>
+
+    <div class="navbar-item">
+      <a href="#" class="navbar-item">signup</a>
+    </div>
+  </div>
+
+</div>
+
+
+</nav>
+<div class="container">
+
 
     <%- body -%>
 
     <footer>
       <p> &copy; Elodie Wanang &amp; Liudmyla Iefremova </p>
     </footer>
+
+    </div>
   </body>
 </html>
