--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,22 +1,25 @@
 <h2>Log in</h2>
+<div class="form">
+
 
 <form action="/login" method="POST" class="form-auth">
 	<div>
-		<label>Username:
+		<label>Username
 		<input type="text" name="username">
 		</label>
 	</div>
 	<div>
-		<label>Password:
+		<label>Password
 		<input type="password" name="password">
 		</label>
+	</div>
 	</div>
 
 	<!--  to view the error message -->
 	 <% if (typeof message != "undefined") { %>
     <div class="error-message"><%= errorMessage %></div>
   <% } %>
-  
+
 	<div>
 		<button>Log In</button>
 	</div>
