--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -3,26 +3,39 @@
 
 
 <form action="/login" method="POST" class="form-auth">
-	<div>
-		<label>Username
-		<input type="text" name="username">
-		</label>
-	</div>
-	<div>
-		<label>Password
-		<input type="password" name="password">
-		</label>
-	</div>
-	</div>
+
+	<div class="field">
+		<p class="control has-icons-left has-icons-right">
+    <input class="input" type="username" placeholder="Username">
+    <span class="icon is-small is-left">
+      <i class="fa fa-user"></i>
+    </span>
+    <span class="icon is-small is-right">
+      <i class="fa fa-check"></i>
+    </span>
+  </p>
+</div>
+<div class="field">
+<p class="control has-icons-left">
+	<input class="input" type="password" placeholder="Password">
+	<span class="icon is-small is-left">
+		<i class="fa fa-lock"></i>
+	</span>
+</p>
+</div>
 
 	<!--  to view the error message -->
 	 <% if (typeof message != "undefined") { %>
     <div class="error-message"><%= errorMessage %></div>
   <% } %>
 
-	<div>
-		<button>Log In</button>
-	</div>
+	<div class="field">
+  <p class="control">
+    <button class="button is-success">
+      Login
+    </button>
+  </p>
+</div>
 	<p class="account-message">
 		Don't have an account? <a href="/signup">Sign up</a>
 	</p>
