--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 
 
 
-  <div class="title">
+  <div class="maintitle">
 <p>Take a look at Africa tech ecosystem !</p>
   </div>
 
@@ -24,10 +24,10 @@
 
 </div>
 
-<div class="contribute">
-  I want to contribute !
+<a href="/login"><div class="contribute">
+ I want to contribute !
 
-</div>
+</div></a>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAADIzhXOJbzOfhryet6qTIr9ZpMH26rq4&callback=initMap"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
