--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -11,7 +11,7 @@
 
     <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="http://bulma.io">
+    <a class="navbar-item" href="/">
       <h1> <a href="/"> <%= title %> </a> </h1>
     </a>
 
@@ -26,11 +26,11 @@
 
   <div class="navbar-end">
     <div class="navbar-item">
-      <a href="#" class="navbar-item" >login</a>
+      <a href="/login" class="navbar-item" >login</a>
     </div>
 
     <div class="navbar-item">
-      <a href="#" class="navbar-item">signup</a>
+      <a href="/signup" class="navbar-item">signup</a>
     </div>
   </div>
 
