--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -32,6 +32,9 @@
     <div class="navbar-item">
       <a href="/signup" class="navbar-item">signup</a>
     </div>
+    <div class="navbar-item">
+      <a href="/logout" class="navbar-item">logout</a>
+    </div>
   </div>
 
 </div>
