--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -6,9 +6,9 @@
 
 	<div class="field">
 		<p class="control has-icons-left has-icons-right">
-    <input class="input" type="username" placeholder="Username">
+    <input class="input" name="email" type="email" placeholder="Email">
     <span class="icon is-small is-left">
-      <i class="fa fa-user"></i>
+      <i class="fa fa-envelope"></i>
     </span>
     <span class="icon is-small is-right">
       <i class="fa fa-check"></i>
@@ -17,7 +17,7 @@
 </div>
 <div class="field">
 <p class="control has-icons-left">
-	<input class="input" type="password" placeholder="Password">
+	<input class="input" name="password" type="password" placeholder="Password">
 	<span class="icon is-small is-left">
 		<i class="fa fa-lock"></i>
 	</span>
@@ -25,8 +25,9 @@
 </div>
 
 	<!--  to view the error message -->
-	 <% if (typeof message != "undefined") { %>
-    <div class="error-message"><%= errorMessage %></div>
+	 <% if (errorMessage) { %>
+    <p class="error-message"><%= errorMessage %>
+		</p>
   <% } %>
 
 	<div class="field">
