--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,30 @@
 
+	<div class="maintitle">
+		<h2>Take a look at Africa tech ecosystem !</h2>
+	</div>
 
+	<div class="searchbar">
 
-  <div class="maintitle">
-<p>Take a look at Africa tech ecosystem !</p>
-  </div>
+		<select class="typecss" name="searchtype">
+			<option value="incubator">Incubator</option>
+			<option value="start-up">Start-up</option>
+		</select>
+		<input type="text" class="filter" id="searchname" placeholder="Enter the name of the organization you're looking for">
+		<input type="text" class="filter" id="searchcountry" placeholder="Ghana, Senegal...">
 
-  <div class="searchbar">
+		<input type="text" class="filter" id="searchregion" placeholder="West, East..">
 
-    <select class="typecss" name="searchtype">
-      <option value="incubator">Incubator</option>
-      <option value="start-up">Start-up</option>
-    </select>
-    <input type="text" class="filter" id="searchname" placeholder="Enter the name of the organization you're looking for">
-    <input type="text" class="filter" id="searchcountry" placeholder="Ghana, Senegal...">
-
-    <input type="text" class="filter" id="searchregion" placeholder="West, East..">
-
-  </div>
+	</div>
 
 
 
-<div id="map">
+	<div id="map">
 
-</div>
+	</div>
 
-<a href="/login"><div class="contribute">
- I want to contribute !
-
-</div></a>
+	<div class="contribute">
+		<a href="/login">I want to contribute !</a>
+	</div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAADIzhXOJbzOfhryet6qTIr9ZpMH26rq4&callback=initMap"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
