--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
 
-	<div class="maintitle">
+	<header class="maintitle">
 		<h2>Take a look at Africa tech ecosystem !</h2>
-	</div>
+	</header>
 
-	<div class="searchbar">
+	<nav class="searchbar">
 
 		<select class="typecss" name="searchtype">
 			<option value="incubator">Incubator</option>
@@ -14,7 +14,7 @@
 
 		<input type="text" class="filter" id="searchregion" placeholder="West, East..">
 
-	</div>
+	</nav>
 
 
 
@@ -22,9 +22,9 @@
 
 	</div>
 
-	<div class="contribute">
+	<footer class="contribute">
 		<a href="/login">I want to contribute !</a>
-	</div>
+	</footer>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAADIzhXOJbzOfhryet6qTIr9ZpMH26rq4&callback=initMap"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
