--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,3 @@
-<h2>Sign up</h2>
 
 <!--  to view the error message -->
    <% if (errorMessage) { %>
@@ -19,8 +18,8 @@
 		<input type="email" name="email" placeholder="Your email@email"></label>
 	<br><br>
 	<label>Status
-		<select>
-			<option selected value="enterpreneur">Enterpreneur</option>
+		<select name="status">
+			<option selected value="entrepreneur">Entrepreneur</option>
 			<option value="incubatorMember">Incubator's member</option>
 		</select></label>
 	<br><br>
