--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -122,7 +122,7 @@ font-size: 13px;
 
 
 .form-auth label {
-  color: #666;
+  /*color: #666;*/
   display: inline-block;
   margin-bottom: 10px;
   text-align: center;
