fixed style for signup

--- a/views/organizations/new.ejs
+++ b/views/organizations/new.ejs
@@ -8,7 +8,7 @@
     </p>
   <% } %>
 
-<form action="/new" method="POST" class="form-auth">
+<form action="/organizations/new" method="POST" class="form-auth">
 
 	<div class="field">
 		<label class="label">Name</label>
@@ -37,6 +37,13 @@
 		<lable class="label">Phone</label>
 			<div class="control">
 				<input type="tel" name="phone" placeholder="Phone number" class="input">
+			</div>
+	</div>
+
+	<div class="field">
+		<lable class="label">Address</label>
+			<div class="control">
+				<input type="text" name="address" placeholder="Address" class="input">
 			</div>
 	</div>
 
