--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,29 +1,55 @@
 
 <!--  to view the error message -->
-   <% if (errorMessage) { %>
-    <p class="error-message">
-      <%= errorMessage %>
-    </p>
-  <% } %>
+	 <% if (errorMessage) { %>
+		<p class="error-message">
+			<%= errorMessage %>
+		</p>
+	<% } %>
 
 <form action="/signup" method="POST" class="form-auth">
-	<label>Username
-		<input type="text" name="username" placeholder="Your name">
-	</label>
-	<br><br>
-	<label>Password
-		<input type="password" name="password" placeholder="Your password"></label>
-	<br><br>
-	<label>Email
-		<input type="email" name="email" placeholder="Your email@email"></label>
-	<br><br>
-	<label>Status
-		<select name="status">
-			<option selected value="entrepreneur">Entrepreneur</option>
-			<option value="incubatorMember">Incubator's member</option>
-		</select></label>
-	<br><br>
-
-
-	<button>Create account</button>
+	<div class="field">
+		<label class="label">Username</label>
+		<div class="control">
+			<input type="text" name="username" placeholder="Your name" class="input">
+		</div>
+	</div>
+	
+	<label class="label">Password</label>
+	<div class="field">
+		<p class="control has-icons-left">
+			<input class="input" name="password" type="password" placeholder="Password">
+			<span class="icon is-small is-left">
+				<i class="fa fa-lock"></i>
+			</span>
+		</p>
+	</div>
+	
+	<div class="field">
+		<label class="label">Email</label>
+		<p class="control has-icons-left has-icons-right">
+		<input class="input" name="email" type="email" placeholder="Email">
+		<span class="icon is-small is-left">
+			<i class="fa fa-envelope"></i>
+		</span>
+		<span class="icon is-small is-right">
+			<i class="fa fa-check"></i>
+		</span>
+		</p>
+	</div>
+	<div class="field">
+		<label class="label">Status</label>
+		<div class="control">
+			<div class="select">
+				<select name="status">
+					<option selected value="entrepreneur">Entrepreneur</option>
+					<option value="incubatorMember">Incubator's member</option>
+				</select>
+			</div>
+		</div>
+	</div>
+	<div class="field">
+		<div class="control">
+			<button class="button is-primary">Create account</button>
+		</div>
+	</div>
 </form>
