--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,10 +18,7 @@
 
 
 
-	<div id="map">
-
-	</div>
-
+	<div id="map"></div>
 	<footer class="contribute">
 		<a href="/login">I want to contribute !</a>
 	</footer>
