--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -3,12 +3,13 @@
 	<head>
 		<title><%= title %></title>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
+		<link rel='stylesheet' href='/dist/css/map-icons.min.css' />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css">
 	</head>
 
 	<body>
-		<header> 
+		<header>
 		<nav class="navbar" role="navigation" aria-label="main navigation">
 			<div class="navbar-brand">
 				<a class="navbar-item" href="/">
@@ -40,7 +41,7 @@
 				</div>
 			</div>
 
-			
+
 		</nav>
 		</header>
 
@@ -53,6 +54,7 @@
 			<p> &copy; Elodie Wanang &amp; Liudmyla Iefremova </p>
 		</footer>
 
-		<script type="text/javascript" src="../javascripts/navbar.js" ></script>
+		<script type="text/javascript" src="/dist/js/map-icons.js" ></script>
+		<script type="text/javascript" src="/javascripts/navbar.js" ></script>
 	</body>
 </html>
