--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,9 @@ title{
   /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color: white;
+  height: 100%;
+        margin: 0;
+        padding: 0;
 }
 
 a {
@@ -102,13 +105,27 @@ font-size: 13px;
 .navbar-brand h1 {
   font-size: 25px;
 }
-
+/*Map Style*/
 #map {
   margin-top: 15px;
   height: 600px;
   width: 100%;
   background-color: grey;
 }
+#legend {
+       font-family: Arial, sans-serif;
+       background: #fff;
+       padding: 10px;
+       margin: 10px;
+       border: 3px solid #000;
+     }
+
+     #legend h3 {
+        margin-top: 0;
+      }
+      #legend img {
+        vertical-align: middle;
+      }
 
 #mainFooter {
   padding-bottom: 20px;
