added contacts vs address property objects

--- a/views/organizations/new.ejs
+++ b/views/organizations/new.ejs
@@ -41,9 +41,27 @@
 	</div>
 
 	<div class="field">
-		<lable class="label">Address</label>
+		<lable class="label">Zip</label>
 			<div class="control">
-				<input type="text" name="address" placeholder="Address" class="input">
+				<input type="text" name="zip" placeholder="Zip code" class="input">
+			</div>
+	</div>
+	<div class="field">
+		<lable class="label">Country</label>
+			<div class="control">
+				<input type="text" name="country" placeholder="Country" class="input">
+			</div>
+	</div>
+	<div class="field">
+		<lable class="label">City</label>
+			<div class="control">
+				<input type="text" name="city" placeholder="City" class="input">
+			</div>
+	</div>
+	<div class="field">
+		<lable class="label">Street</label>
+			<div class="control">
+				<input type="text" name="street" placeholder="Street" class="input">
 			</div>
 	</div>
 
