--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -10,7 +10,7 @@
 
 	<body>
 		<header>
-		<nav class="navbar" role="navigation" aria-label="main navigation">
+		<nav class="navbar is-light" role="navigation" aria-label="main navigation">
 			<div class="navbar-brand">
 				<a class="navbar-item" href="/">
 					<h1> <a href="/"> <%= title %> </a> </h1>
