--- a/views/organizations/index.ejs
+++ b/views/organizations/index.ejs
@@ -1,18 +1,43 @@
-<h2>It's time to work! </h2>
-<h3>Take a look at our contributors'requests </h2>
+<div class="titlerequest">
+
+<h2>It's time to work ! </h2>
+<h3>Take a look at our contributors' requests </h2>
+<br>
+</div>
+
+<div class="requestdetails">
+
+
 <ul>
   <% organizations.forEach((organization) => {%>
-    <li><a href="/organizations/<%=organization.id%>"><%=organization.name%></a>
-      <%=organization.description%>
-      <%=organization.contacts%>
-      <%=organization.address%>
-      <%=organization.category%>
-      <%=organization.status%>
-      <%=organization.ownerId%>
-      <form class="" action="/organizations/<%=organization.id%>/delete" method="POST">
-      <input type="submit"class="button" name="button" value="Delete Organization">
-      </form>
-    </li>
+    <li>
+      <a href="/organizations/<%=organization.id%>">
+      <label for="">Name</label>:  <%=organization.name%>
+      </a>
+      <br>
+      <label for="">Description</label>: <%=organization.description%>
+        <br>
+        <label for="">Email </label>: <%=organization.email%>
+          <br>
+          <label for="">Phone</label>: <%=organization.phone%>
+            <br>
+            <label for="">address</label>: <%=organization.address%>
+              <br>
+              <label for="">Category </label>: <%=organization.category%>
+                <br>
+                <label for="">Status of the request </label>: <%=organization.status%>
+                  <br>
+                    <br>
+<div class="buttonrequest">
+
+<a class="button is-success is-normal buttonrequest" href="/celebrities/new">Add organization</a>
+                      <form class="" action="/organizations/<%=organization.id%>/delete" method="POST">
+                        <input type="submit" class="button" name="button" value="Delete organization">
+                      </form>
+                      </div>
+      </li>
 <%  })%>
-</ul>
-<a class= "button is-success is-normal" href="/celebrities/new">Add new organization</a>
+  </ul>
+
+
+  </div>
