--- a/views/organizations/new.ejs
+++ b/views/organizations/new.ejs
@@ -76,6 +76,12 @@
 			</div>
 		</div>
 	</div>
+
+
+	<div class="control">
+		<input type="text" name="latitude" placeholder="Latitude" class="input">
+	  <input type="text" name="longitude" placeholder="Longitude" class="input">
+  </div>
 	
 	<div class="field">
 	<div class="control">
