Single button adding a marker trial

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,6 +54,11 @@ a {
   display: flex;
   justify-content: center;
 }
+
+.searchbar a {
+  margin-left: 10px;
+  height: 50px;
+}
 #searchname {
   background-color: #65A188;
 }
