1rst filter test

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 
 	<nav class="searchbar">
 
-		<select class="typecss" name="searchtype">
+		<select id= "filterone"class="typecss" name="searchtype">
 			<option value="incubator">Incubator</option>
 			<option value="start-up">Start-up</option>
 		</select>
