partly fixed filter1 feature

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,9 @@
 
 	<nav class="searchbar">
 
-		<select id= "filterone"class="typecss" name="searchtype">
-			<option value="incubator">Incubator</option>
-			<option value="start-up">Start-up</option>
+		<select id="filter1" class="typecss" name="searchtype">
+			<option value="incubator">incubator</option>
+			<option value="start-up">startup</option>
 		</select>
 		<input type="text" class="filter" id="searchname" placeholder="Enter the name of the organization you're looking for">
 		<input type="text" class="filter" id="searchcountry" placeholder="Ghana, Senegal...">
