--- a/views/organizations/index.ejs
+++ b/views/organizations/index.ejs
@@ -6,35 +6,27 @@
 <div class="requestdetails">
 <ul>
   <% organizations.forEach((organization) => {%>
-    <li>
-      <a href="/organizations/<%=organization.id%>">
-      <label for="">Name</label>:  <%=organization.name%>
-      </a>
-      <br>
-      <label for="">Description</label>: <%=organization.description%>
-        <br>
-        <label for="">Email </label>: <%=organization.email%>
-          <br>
-          <label for="">Phone</label>: <%=organization.phone%>
-            <br>
-            <label for="">address</label>: <%=organization.address%>
-              <br>
-              <label for="">Category </label>: <%=organization.category%>
-                <br>
-                <label for="">Status of the request </label>: <%=organization.status%>
-                  <br>
-                    <br>
-<div class="buttonrequest">
-
-<a class="button is-success is-normal buttonrequest" href="/celebrities/new">Add organization</a>
-                      <form class="" action="/organizations/<%=organization.id%>/delete" method="POST">
-                        <input type="submit" class="button" name="button" value="Delete organization">
-                      </form>
-                      </div>
-                      <br><br>
-      </li>
-<%  })%>
+  <ul>
+    <li><a href="/organizations/<%=organization.id%>">
+      Name: <%=organization.name%> </a></li>
+    <li>Description: <%=organization.description%></li>
+    <li>Email: <%=organization.contacts.email%></li>
+    <li>Phone: <%=organization.contacts.phone%></li>
+    <li>Address: <%=organization.address.street%>, 
+      <%=organization.address.city%>, 
+      <%=organization.address.zip%>, 
+      <%=organization.address.country%>
+    </li>
+    <li>Category: <%=organization.category%></li>
+    <li>Status of the request: <%=organization.status%></li>
+    
+    <li class="buttonrequest">
+      <a class="button is-success is-normal buttonrequest" href="/celebrities/new">Add organization</a>
+        <form class="" action="/organizations/<%=organization.id%>/delete" method="POST">
+          <input type="submit" class="button" name="button" value="Delete organization">
+        </form>
+    </li>
   </ul>
-
-
-  </div>
+  <% }) %>
+</ul>
+</div>
