--- a/views/organizations/index.ejs
+++ b/views/organizations/index.ejs
@@ -1,32 +1,47 @@
 <div class="titlerequest">
-  <h2>It's time to work !</h2>
-  <h3>Take a look at our contributors' requests </h2>
+	<h2>It's time to work !</h2>
+	<h3>Take a look at our contributors' requests </h2>
 </div>
 
 <div class="requestdetails">
-<ul>
-  <% organizations.forEach((organization) => {%>
-  <ul>
-    <li><a href="/organizations/<%=organization.id%>">
-      Name: <%=organization.name%> </a></li>
-    <li>Description: <%=organization.description%></li>
-    <li>Email: <%=organization.contacts.email%></li>
-    <li>Phone: <%=organization.contacts.phone%></li>
-    <li>Address: <%=organization.address.street%>, 
-      <%=organization.address.city%>, 
-      <%=organization.address.zip%>, 
-      <%=organization.address.country%>
-    </li>
-    <li>Category: <%=organization.category%></li>
-    <li>Status of the request: <%=organization.status%></li>
-    
-    <li class="buttonrequest">
-      <a class="button is-success is-normal buttonrequest" href="/celebrities/new">Add organization</a>
-        <form class="" action="/organizations/<%=organization.id%>/delete" method="POST">
-          <input type="submit" class="button" name="button" value="Delete organization">
-        </form>
-    </li>
-  </ul>
-  <% }) %>
-</ul>
+	<ul>
+		<% organizations.forEach((organization) => {%>
+		<ul>
+			<li><a href="/organizations/<%=organization.id%>">
+				Name: <%=organization.name%> </a></li>
+			<li>Description: <%=organization.description%></li>
+			<li>Email: <%=organization.contacts.email%></li>
+			<li>Phone: <%=organization.contacts.phone%></li>
+			<li>Address: <%=organization.address.street%>, 
+				<%=organization.address.city%>, 
+				<%=organization.address.zip%>, 
+				<%=organization.address.country%>
+			</li>
+			<li>Category: <%=organization.category%></li>
+			<li>Status of the request: <%=organization.status%></li>
+
+			<% if (user.isAdmin) { %>
+			<form action="organizations/<%=organization.id%>/status" method="post">
+        <input type="hidden" value="accepted">
+        <button>Accept</button>
+      </form>
+      <form action="organizations/<%=organization.id%>/status" method="post">
+        <input type="hidden" value="rejected">
+        <button>Reject</button>
+      </form>
+
+
+			<!--
+			<li class="buttonrequest">
+				<a class="button is-success is-normal buttonrequest" href="/celebrities/new">Add organization</a>
+					<form class="" action="/organizations/<%=organization.id%>/delete" method="POST">
+						<input type="submit" class="button" name="button" value="Delete organization">
+
+					</form>
+				-->
+					<% } %>
+			</li>
+		</ul>
+		<% }) %>
+	</ul>
 </div>
