--- a/views/organizations/index.ejs
+++ b/views/organizations/index.ejs
@@ -26,7 +26,9 @@
                     <br>
 <div class="buttonrequest">
 
-<a class="button is-success is-normal buttonrequest" href="/celebrities/new">Add organization</a>
+  <form class="" action="/organizations/<%=organization.id%>" method="POST">
+    <button type="submit" id="approval" class="button is-success is-normal buttonrequest">Add organization</button>
+  </form>
                       <form class="" action="/organizations/<%=organization.id%>/delete" method="POST">
                         <input type="submit" class="button" name="button" value="Delete organization">
                       </form>
