fixed accept button for admin

--- a/views/organizations/index.ejs
+++ b/views/organizations/index.ejs
@@ -21,12 +21,12 @@
 			<li>Status of the request: <%=organization.status%></li>
 
 			<% if (user.isAdmin && organization.status === "pending") { %>
-			<form action="organizations/<%=organization.id%>/status" method="post">
-        <input type="hidden" value="accepted">
+			<form action="<%=organization.id%>" method="POST">
+        <input name="status" type="hidden" value="accepted">
         <button>Accept</button>
       </form>
-      <form action="organizations/<%=organization.id%>/status" method="post">
-        <input type="hidden" value="rejected">
+      <form action="<%=organization.id%>" method="POST">
+        <input name="status" type="hidden" value="rejected">
         <button>Reject</button>
       </form>
 
@@ -41,6 +41,7 @@
 				-->
 					<% } %>
 			</li>
+			<hr>
 		</ul>
 		<% }) %>
 	</ul>
