edit views and route for requests

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 		<input type="text" class="filter" id="searchcountry" placeholder="Ghana, Senegal...">
 
 		<input type="text" class="filter" id="searchregion" placeholder="West, East..">
-	<a id="Nigeriabutton"class="button is-success is-outlined">Nigeria</a>
+	<!--<a id="Nigeriabutton" class="button is-success is-outlined">Nigeria</a>-->
 
 	</nav>
 
