--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -24,8 +24,11 @@
 			</div>
 
 			<div class="navbar-menu">
-				<% if (!user) { %>
 				<div class="navbar-end">
+					<div class="navbar-item">
+						<a href="/organizations" class="navbar-item">View all organizations</a>
+					</div>
+					<% if (!user) { %>
 					<div class="navbar-item">
 						<a href="/login" class="navbar-item" >Login</a>
 					</div>
@@ -36,14 +39,14 @@
 					<% } %>
 					<% if (user) { %>
 
-						<div class="navbar-end">
-							<div class="navbar-item">
-						<a href="/logout" class="navbar-item">Logout</a>
-          </div>
+					<div class="navbar-end">
+						<div class="navbar-item">
+							<a href="/organizations/new" class="navbar-item">Add new organization</a>
+						</div>
 
-								<div class="navbar-item">
-						<a href="/organizations/new" class="navbar-item">Add new organization</a>
-         </div>
+						<div class="navbar-item">
+							<a href="/logout" class="navbar-item">Logout</a>
+						</div>
 					</div>
 					<% } %>
 				</div>
