--- a/views/organizations/index.ejs
+++ b/views/organizations/index.ejs
@@ -1,11 +1,10 @@
-<div class="titlerequest">
-	<h2>It's time to work !</h2>
-	<h3>Take a look at our contributors' requests </h2>
-</div>
+<h2 class="title">Organization's details</h2>
+
 
 <div class="requestdetails">
 	<ul>
 		<% organizations.forEach((organization) => {%>
+		<% if (organization.status === "accepted") { %>
 		<ul>
 			<li><a href="/organizations/<%=organization.id%>">
 				Name: <%=organization.name%> </a></li>
@@ -19,30 +18,9 @@
 			</li>
 			<li>Category: <%=organization.category%></li>
 			<li>Status of the request: <%=organization.status%></li>
-
-			<% if (user.isAdmin && organization.status === "pending") { %>
-			<form action="/organizations/<%=organization.id%>" method="POST">
-        <input name="status" type="hidden" value="accepted">
-        <button>Accept</button>
-      </form>
-      <form action="/organizations/<%=organization.id%>" method="POST">
-        <input name="status" type="hidden" value="rejected">
-        <button>Reject</button>
-      </form>
-
-
-			<!--
-			<li class="buttonrequest">
-				<a class="button is-success is-normal buttonrequest" href="/celebrities/new">Add organization</a>
-					<form class="" action="/organizations/<%=organization.id%>/delete" method="POST">
-						<input type="submit" class="button" name="button" value="Delete organization">
-
-					</form>
-				-->
-					<% } %>
-			</li>
 			<hr>
 		</ul>
+		<% } %>
 		<% }) %>
 	</ul>
 </div>
