--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -40,6 +40,12 @@
 					<% if (user) { %>
 
 					<div class="navbar-end">
+						<% if (user.isAdmin) { %>
+						<div class="navbar-item">
+							<a href="/organizations/admin-requests" class="navbar-item">Check requests</a>
+						</div>
+						<% } %>
+
 						<div class="navbar-item">
 							<a href="/organizations/new" class="navbar-item">Add new organization</a>
 						</div>
