--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -57,18 +57,18 @@
 					<% } %>
 				</div>
 			</div>
-
-
 		</nav>
 		</header>
 
-		<div class="container">
+		
 
 		<%- body -%>
 
-		</div>
+		
 		<footer class="footer" id="mainFooter">
+			<div class="content has-text-centered">
 			<p> &copy; Elodie Wanang &amp; Liudmyla Iefremova </p>
+			</div>
 		</footer>
 
 		<script type="text/javascript" src="/dist/js/map-icons.js" ></script>
