--- a/views/organizations/index.ejs
+++ b/views/organizations/index.ejs
@@ -1,6 +1,5 @@
 <div class="titlerequest">
-	<h2>It's time to work !</h2>
-	<h3>Take a look at our contributors' requests </h2>
+	<h2>Organizations' details</h2>
 </div>
 
 <div class="requestdetails">
