--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -45,6 +45,10 @@
 							<a href="/organizations/admin-requests" class="navbar-item">Check requests</a>
 						</div>
 						<% } %>
+						<div class="navbar-item">
+							<a href="/users/profile" class="navbar-item">All my spots</a>
+						</div>
+
 
 						<div class="navbar-item">
 							<a href="/organizations/new" class="navbar-item">Add new organization</a>
@@ -60,11 +64,11 @@
 		</nav>
 		</header>
 
-		
+
 
 		<%- body -%>
 
-		
+
 		<footer class="footer" id="mainFooter">
 			<div class="content has-text-centered">
 			<p> &copy; Elodie Wanang &amp; Liudmyla Iefremova </p>
