--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -14,7 +14,7 @@
 		<nav class="navbar " role="navigation" aria-label="main navigation">
 			<div class="navbar-brand">
 				<a class="navbar-item" href="/">
-					<h1> <a href="/"> <%= title %> </a> </h1>
+					<h1> <a href="/"> NEL&#398;N&#398;</a> </h1>
 				</a>
 				<button class="button navbar-burger">
 					<span></span>
